--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,3 +13,24 @@
 .dl-box p{
     text-align: left;
 }
+.box2{
+    position: absolute;
+    height: 150px;
+    width: 150px;
+}
+.azul{
+    background-color: blue;
+    z-index: 1;
+}
+.rojo{
+    background-color: red;
+    z-index: 2;
+    left: 20px;
+    top: 20px;
+}
+.verde{
+    background-color: green;
+    z-index: 3;
+    left: 30px;
+    top: 30px;
+}
